# Summit

./: CMain.c  CMakeLists.txt  ObjCMain.h  ObjCMain.m  README.md  SwiftMain.swift  main.cpp
MetalCpp/: CMakeLists.txt
MetalCpp/Private/: MetalBuffer.mm  MetalCommandBuffer.mm  MetalCommandEncoder.mm  MetalCommandQueue.mm  MetalDepthStencil.mm  MetalDevice.mm  MetalDrawable.mm  MetalHeap.mm  MetalPipeline.mm  MetalRenderPass.mm  MetalSampler.mm  MetalTexture.mm  MetalTypeConverter.h  MetalTypeConverter.mm  MetalVertexDescriptor.mm  MetalWrapperCommon.mm  TypeConverter.h  pch.h
MetalCpp/Private/MacOS/: Device.mm
MetalCpp/Public/MetalCpp/: MetalBuffer.h  MetalCommandBuffer.h  MetalCommandEncoder.h  MetalCommandQueue.h  MetalCppModule.h  MetalDepthStencil.h  MetalDevice.h  MetalDeviceResource.h  MetalDrawable.h  MetalHeap.h  MetalPipeline.h  MetalRenderPass.h  MetalResource.h  MetalSampler.h  MetalTexture.h  MetalTypes.h  MetalVertexDescriptor.h  MetalWrapperCommon.h
MetalCpp/Public/MetalCpp/MacOS/: Device.hpp
MetalRenderer/: CMakeLists.txt
MetalRenderer/Private/: DeviceResourceIdImpl.cpp  DeviceResourceIdImpl.h  MetalRenderPass.cpp  MetalRenderer.h  MetalRenderer.mm  MetalRendererImpl.swift  MetalRendererWrapper.h  MetalRendererWrapper.m  MetalSwapChain.h  MetalSwapChain.mm  RendererToMetalConverter.cpp  RendererToMetalConverter.h  pch.h
MetalRenderer/Private/MacOS/: SAView.h  SAView.mm
MetalRenderer/Public/MetalRenderer/: MetalRenderPass.h  MetalRenderer.h  MetalRendererBase.h  MetalRendererImpl.swift  MetalRendererModule.h
OpenGLRenderer/: CMakeLists.txt
OpenGLRenderer/Private/: OpenGLRenderer.h  OpenGLRenderer.mm  OpenGLRendererImpl.swift  OpenGLRendererWrapper.h  OpenGLRendererWrapper.m
OpenGLRenderer/Public/OpenGLRenderer/: OpenGLRendererBase.h
Private/Metal/: MetalRenderer.cpp  MetalRendererImpl.swift  MetalRendererWrapper.h  MetalRendererWrapper.m
Public/Renderer/: MetalRenderer.swift  Renderer.h  Renderer.swift  RendererBase.h  RendererImpl.h  RendererImpl.mm  RendererWrapper.h  RendererWrapper.m
Public/Renderer/Resources/: Buffer.h  Effect.h
Renderer/: CMakeLists.txt
Renderer/Private/: Camera.cpp  Command.cpp  CommandImpl.h  Effect.cpp  Layer.cpp  LayerStack.cpp  Matrix4.cpp  VertexBuffer.cpp
Renderer/Public/Renderer/: Buffer.h  Camera.h  Command.h  CommandBuffer.h  DeviceResourceId.h  Effect.h  Layer.h  LayerStack.h  Math.h  Matrix4.h  Mesh.h  Object3d.h  PointerEvent.h  RenderPass.h  Renderer.h  RendererResource.h  RendererTypes.h  Signal.h  SwapChain.h  VertexBuffer.h
Renderer/Public/Renderer/Framegraph/: Framegraph.hpp  RenderTask.hpp  RenderTaskBase.hpp  RenderTaskBuilder.hpp  Resource.hpp  ResourceBase.hpp
Renderer/Public/Renderer/Math/: Math.h
Renderer/Public/Renderer/Math/detail/: defines.h  matrix.h  quaternion.h  vector.h
Renderer/Public/Renderer/Math/detail/simd/: matrix_simd.h  quaternion_simd.h  simd_types.h  vector_simd.h
Renderer/Public/Renderer/Resources/: Texture.hpp
SummitAppKit/: CMakeLists.txt
SummitAppKit/Private/: Application.cpp  Gui.cpp  GuiCallback.cpp  GuiCallback.h  View.mm  Window.mm
SummitAppKit/Private/macOS/: SAWindow.h  SAWindow.mm
SummitAppKit/Public/SummitAppKit/: Application.h  Gui.h  Input.h  Window.h
SummitDemo/: CMakeLists.txt  main.cpp
SummitDemo/Application/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Chalet.cpp  Chalet.h  Cube.cpp  Cube.h  Dragon.cpp  Dragon.h  ObjLoader.cpp  ObjLoader.h  ViewController.h  ViewController.mm  main.mm  tiny_obj_loader.h
SummitDemo/Application/Resources/: Chalet.metal  Dragon.metal  ImGui.metal  Info.plist  Main.storyboard  Shaders.metal  ShadowPass.metal
